{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 38,
  "lineage": "8871bb2a-f9e2-c17b-035f-20f6ffe0b3c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:104552824062:instance/i-08e3f96e498e3d13d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e3f96e498e3d13d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool-holiday-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1bf6e85625e9faf",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-52-90-11-182.compute-1.amazonaws.com",
            "public_ip": "52.90.11.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062874c6fcd0ac65c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d423937279fa1f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0327ba743692c75cf",
            "tags": {
              "Name": "ubuntu web server1"
            },
            "tags_all": {
              "Name": "ubuntu web server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d423937279fa1f2"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:104552824062:instance/i-0599072437db01279",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0599072437db01279",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool-holiday-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d916954b6d07174",
            "private_dns": "ip-10-0-2-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.21",
            "public_dns": "ec2-44-192-12-202.compute-1.amazonaws.com",
            "public_ip": "44.192.12.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048da53d82c8cab98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d423937279fa1f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c58ba279d14b039b",
            "tags": {
              "Name": "ubuntu web server2"
            },
            "tags_all": {
              "Name": "ubuntu web server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d423937279fa1f2"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:104552824062:instance/i-0774685d86dc89e0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0774685d86dc89e0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool-holiday-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02548ed42ada10d9d",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-18-207-161-143.compute-1.amazonaws.com",
            "public_ip": "18.207.161.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be196a8760d9f5ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d423937279fa1f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0327ba743692c75cf",
            "tags": {
              "Name": "ubuntu web server3"
            },
            "tags_all": {
              "Name": "ubuntu web server3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d423937279fa1f2"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:internet-gateway/igw-04f46e53166c7e361",
            "id": "igw-04f46e53166c7e361",
            "owner_id": "104552824062",
            "tags": {
              "Name": "mini project internet gateway"
            },
            "tags_all": {
              "Name": "mini project internet gateway"
            },
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mini_project_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:loadbalancer/app/mini-project-lb-tf/e72db348335f4b37",
            "arn_suffix": "app/mini-project-lb-tf/e72db348335f4b37",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mini-project-lb-tf-291666735.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:loadbalancer/app/mini-project-lb-tf/e72db348335f4b37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mini-project-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071c6a9db15d8c6a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0327ba743692c75cf"
              },
              {
                "subnet_id": "subnet-0c58ba279d14b039b"
              }
            ],
            "subnets": [
              "subnet-0327ba743692c75cf",
              "subnet-0c58ba279d14b039b"
            ],
            "vpc_id": "vpc-0c042d0abc4251357",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.web-server-instance1",
            "aws_instance.web-server-instance2",
            "aws_instance.web-server-instance3",
            "aws_security_group.ec2_sg",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.mini_project-subnet1",
            "aws_subnet.mini_project-subnet2",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mini_project_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:listener/app/mini-project-lb-tf/e72db348335f4b37/b62220f5ca5d6239",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:listener/app/mini-project-lb-tf/e72db348335f4b37/b62220f5ca5d6239",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:loadbalancer/app/mini-project-lb-tf/e72db348335f4b37",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_instance.web-server-instance1",
            "aws_instance.web-server-instance2",
            "aws_instance.web-server-instance3",
            "aws_lb.mini_project_lb",
            "aws_lb_target_group.mini_project_tg",
            "aws_security_group.ec2_sg",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.mini_project-subnet1",
            "aws_subnet.mini_project-subnet2",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mini_project_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:listener-rule/app/mini-project-lb-tf/e72db348335f4b37/b62220f5ca5d6239/b4dfa7aeab155009",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:listener-rule/app/mini-project-lb-tf/e72db348335f4b37/b62220f5ca5d6239/b4dfa7aeab155009",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:listener/app/mini-project-lb-tf/e72db348335f4b37/b62220f5ca5d6239",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "dependencies": [
            "aws_instance.web-server-instance1",
            "aws_instance.web-server-instance2",
            "aws_instance.web-server-instance3",
            "aws_lb.mini_project_lb",
            "aws_lb_listener.mini_project_listener",
            "aws_lb_target_group.mini_project_tg",
            "aws_security_group.ec2_sg",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.mini_project-subnet1",
            "aws_subnet.mini_project-subnet2",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mini_project_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
            "arn_suffix": "targetgroup/mini-project-target-group/7d457bd645751025",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mini-project-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mini_project_lb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025-20230205165443983500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
            "target_id": "i-08e3f96e498e3d13d"
          },
          "dependencies": [
            "aws_instance.web-server-instance1",
            "aws_lb_target_group.mini_project_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mini_project_lb_tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025-20230205165444060300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
            "target_id": "i-0599072437db01279"
          },
          "dependencies": [
            "aws_instance.web-server-instance2",
            "aws_lb_target_group.mini_project_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mini_project_lb_tg_attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025-20230205165627848100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104552824062:targetgroup/mini-project-target-group/7d457bd645751025",
            "target_id": "i-0774685d86dc89e0c"
          },
          "dependencies": [
            "aws_instance.web-server-instance3",
            "aws_lb_target_group.mini_project_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.mini_project-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "mini_project_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:network-acl/acl-030bfcf85d7b9110b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-030bfcf85d7b9110b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "104552824062",
            "subnet_ids": [
              "subnet-0327ba743692c75cf",
              "subnet-0c58ba279d14b039b"
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_subnet.mini_project-subnet1",
            "aws_subnet.mini_project-subnet2",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mini_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:route-table/rtb-045043ed4f806b5bb",
            "id": "rtb-045043ed4f806b5bb",
            "owner_id": "104552824062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f46e53166c7e361",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f46e53166c7e361",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini project mini project"
            },
            "tags_all": {
              "Name": "mini project mini project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b71bce220fd9e3c",
            "route_table_id": "rtb-045043ed4f806b5bb",
            "subnet_id": "subnet-0327ba743692c75cf"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mini_project",
            "aws_subnet.mini_project-subnet1",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb07904bf14c68e",
            "route_table_id": "rtb-045043ed4f806b5bb",
            "subnet_id": "subnet-0c58ba279d14b039b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mini_project",
            "aws_subnet.mini_project-subnet2",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:security-group/sg-07d423937279fa1f2",
            "description": "Allow web traffic for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d423937279fa1f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071c6a9db15d8c6a3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071c6a9db15d8c6a3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_traffic_ec2_sg",
            "name_prefix": "",
            "owner_id": "104552824062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 sg"
            },
            "tags_all": {
              "Name": "ec2 sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:security-group/sg-071c6a9db15d8c6a3",
            "description": "Allow web traffic on load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-071c6a9db15d8c6a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load_balancer-sg",
            "name_prefix": "",
            "owner_id": "104552824062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow web traffic on load balancer"
            },
            "tags_all": {
              "Name": "allow web traffic on load balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mini_project-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:subnet/subnet-0327ba743692c75cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0327ba743692c75cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104552824062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini project subnet-1"
            },
            "tags_all": {
              "Name": "mini project subnet-1"
            },
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mini_project-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:subnet/subnet-0c58ba279d14b039b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c58ba279d14b039b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104552824062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini project subnet-2"
            },
            "tags_all": {
              "Name": "mini project subnet-2"
            },
            "vpc_id": "vpc-0c042d0abc4251357"
          },
          "dependencies": [
            "aws_vpc.mini_project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mini_project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104552824062:vpc/vpc-0c042d0abc4251357",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db06955d6bcae3b2",
            "default_route_table_id": "rtb-0286dbb7551b8c381",
            "default_security_group_id": "sg-0b8f749ee909bf9b2",
            "dhcp_options_id": "dopt-0745183224c12b7e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c042d0abc4251357",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0286dbb7551b8c381",
            "owner_id": "104552824062",
            "tags": {
              "Name": "mini project vpc"
            },
            "tags_all": {
              "Name": "mini project vpc"
            }
          }
        }
      ]
    }
  ]
}